Twitch link change

--- a/links/index.html
+++ b/links/index.html
@@ -15,7 +15,7 @@
 </h1>
 <h3 style="font-family: Helvetica">One stop shop for all my links! :)
 </h3>
-<a href="https://m.twitch.tv.com/crown_devilz">Twitch</a> </br>
+<a href="https://m.twitch.tv/crown_devilz">Twitch</a> </br>
 <a href="https://instagram.com/crown_devilz?igshid=linfgnmfj6rz">Instagram</a> </br>
 <a href="https://www.youtube.com/channel/UCYiCTn37zGTEwrYQunOR94Q?sub_confirmation=1">YouTube</a> </br>
 <a href="https://discord.gg/vbrsnckyEt">Discord</a> </br>
